--- a/content.html
+++ b/content.html
@@ -1,25 +1,24 @@
 <body style="background: #D9EEF9;">
-<div id="memo-search-content" 
+<div id="mms-main-div" 
     style="
     position: absolute; 
     align-items: flex-start;
     display: flex;
     ">
 
-    <img id='icon' 
+    <img id='mms-icon' 
     src="https://www.maimemo.com/res/images/site/logo4.png"
     style="width: 40px; height: 40px;"/>
 
-    <div id="content"
+    <div id="mm-content-div"
         style="
         margin-left: 10px; 
         border-radius: 5px; 
         font-size: 16px;
-        background: #FFFFFF;
+        background: #469F87;
         width: 200px;
-        height: 270px;
         ">
-        <div id="bar"
+        <div id="mms-bar"
             style="
             height: 25px;
             background: #469F87;
@@ -27,9 +26,15 @@
             border-top-right-radius: 5px;
             ">
         </div>
-        <div id="word-detail"
-            style="padding: 5px; font-size: 12px;">
-            <span id="spelling"
+        <div id="mms-word-detail-div"
+            style="
+            padding: 5px; 
+            font-size: 12px; 
+            background: #FFFFFF;
+            margin: 2px;
+            border-radius: 5px;
+            ">
+            <span id="mms-spelling"
                 style="
                 color: #D56635; 
                 font-size: 16px;
@@ -37,18 +42,18 @@
                 display: block;
                 ">Oops</span>
             
-            <div id="phonetic-uk" style="margin-top: 2px;">
+            <div id="mms-phonetic-uk" style="margin-top: 2px;">
                 <span>英 [ʊps]</span>
             </div>
-            <div id="phonetic-us" style="margin-top: 2px;">
+            <div id="mms-phonetic-us" style="margin-top: 2px;">
                 <span>美 [ʊpsˌuːps]</span>
             </div>
 
-            <div id="interpretation" style="margin-top: 5px;">
+            <div id="mms-interpretation" style="margin-top: 5px;">
                 <span>int. 哎哟，啊呀（某人摔倒或出了点小差错时的用语）</span>
             </div>
             
-            <div class="dotted-line-h" style="
+            <div class="mms-dotted-line" style="
             margin-top: 10px;
             height: 1px;
             background-image: linear-gradient(to left, #469F87 50%, #ffffff 50%);
