--- a/html/popup.html
+++ b/html/popup.html
@@ -1,13 +1,15 @@
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<link rel="stylesheet" href="https://unpkg.com/@picocss/pico@latest/css/pico.min.css">
 <head>
     <style>
         * {
-            margin: 0;
-            padding: 0;
+          margin: 0;
+          padding: 0;
         }
 
         body {
-            width: 200px;
-            height: 100px;
+          width: 400px;
+          height: 100px;
         }
 
         div {
@@ -15,11 +17,24 @@
             font-size: 16px;
             text-align: center;
         }
+
+        #loginBtn {
+          background-color: #469F87;
+        }
+
+        .form-group {
+          margin: 0 10px;
+        }
+
+        #loginBtn {
+          margin: 0 auto;
+          width: 30%;
+        }
     </style>
 </head>
 <body>
-    <div id="main">
-        <script src="js/index.js"></script>
-    </div>
+  <div id='app'>
+  </div>
+  <script src="../popup.js"></script>
 </body>
 
