twist: Update popup page & implement login

--- a/html/options.html
+++ b/html/options.html
@@ -26,7 +26,8 @@
     </div>
     <div>
         remove_word_from_notepad_api: <input type="text" id="remove_word_from_notepad_api"/>
-    </div>    
+    </div>
+    <div id="app"></div> 
 </body>
 
 <script src="../options.js"></script>
