feat: Add login & profile components

--- a/html/popup.html
+++ b/html/popup.html
@@ -2,20 +2,19 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@latest/css/pico.min.css">
   <style>
+
+    html {
+      height: 220px;
+    }
+
     * {
       margin: 0;
       padding: 0;
     }
 
     body {
-      width: 350px;
-      height: 300px;
-    }
-
-    div {
-        line-height: 100px;
-        font-size: 16px;
-        text-align: center;
+      width: 280px;
+      height: 220px;
     }
   </style>
 </head>
